# vector-domain-search-api

./: .env  .gitignore  README.md  docker-compose.yml  inspect_typesense.py  list_models.py  pyproject.toml
.dvc/: config
app/api/: auth.py  main.py  routes.py
app/core/: config.py
app/data_access/: database.py  m_views.py  models.py
app/docs/architecture/: bronze_layer.md  data_lake_architecture.md  gold_layer.md  silver_layer.md
app/domain/: __init__.py  asset.py  category.py  cost_center.py  customer.py  environment.py  fact_sales.py  gold_entities.py  hardware_profile.py  metric_entry.py  order.py  product.py  provider.py  region.py  sales_person.py  security_tier.py  service_type.py  status.py  store.py  team.py
app/etl/: pipeline.py
app/services/: ai_service.py  asset_service.py  category_service.py  cost_center_service.py  customer_service.py  environment_service.py  fact_sales_service.py  git_helper.py  hardware_profile_service.py  metric_service.py  order_service.py  product_service.py  provider_service.py  region_service.py  sales_person_service.py  search_gold.py  search_service.py  security_tier_service.py  seed_service.py  service_type_service.py  status_service.py  store_service.py  team_service.py
data/: bronze.dvc
data/bronze/: assets_2026_01_23_00_05_00.csv  categories.csv  cost_centers_2026_01_23_00_05_00.json  customers.csv  environments_2026_01_23_00_05_00.csv  hardware_profiles_2026_01_23_00_05_00.csv  metric_entries_2026_01_23_00_05_00.csv  orders.csv  products.csv  regions_2026_01_23_00_05_00.csv  sales_people.csv  security_tiers_2026_01_23_00_05_00.csv  service_types_2026_01_23_00_05_00.csv  statuses_2026_01_23_00_05_00.csv  stores.csv  teams_2026_01_23_00_05_00.csv
tests/: test_api.py  test_service.py
typesense-data/db/: 000121.sst  IDENTITY  LOG  MANIFEST-000005
typesense-data/meta/: IDENTITY  LOG
typesense-data/state/log/: log_inprogress_00000000000000000001  log_meta
typesense-data/state/snapshot/snapshot_00000000000000000071/: __raft_snapshot_meta
typesense-data/state/snapshot/snapshot_00000000000000000071/db_snapshot/: 000116.sst  000118.sst  MANIFEST-000005
