[project]
name = "vector-domain-search-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Andrew-GLB",email = "andrexcobar@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn (>=0.40.0,<0.41.0)",
    "sqlmodel (>=0.0.31,<0.0.32)",
    "typesense (>=1.3.0,<2.0.0)",
    "polars (>=1.37.1,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
