[project]
name = "vector-domain-search-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Andrew-GLB",email = "andrexcobar@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.128.0,<0.129.0)",
    "uvicorn[standard] (>=0.40.0,<0.41.0)",
    "sqlmodel (>=0.0.31,<0.0.32)",
    "typesense (>=1.3.0,<2.0.0)",
    "polars (>=1.37.1,<2.0.0)",
    "pydantic[email] (>=2.12.5,<3.0.0)",
    "pypdf (>=6.6.0,<7.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "google-generativeai (>=0.8.6,<0.9.0)",
    "python-dotenv (>=1.2.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]